--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
-header{
-    background-color: #383D58;
-    color: white;
+*{
+margin: 0;
+padding: 0;
+}
+
+.cabecalho {
+    background-color: rgb(0, 95, 21);
+     color: white    ;
+    display: flex;
+    justify-content: space-around;
+    padding: 30px 0;
+    font-size: 30px;
+}
+
+.cabecalho-imagem{
+   width: 25%;
+}
+
+.cabecalho-lista-item {
+    display: inline-block;
+    margin: 0 16px;
 }
