--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ margin: 0;
 padding: 0;
 }
 
-.cabecalho {
-    background-color: rgb(0, 95, 21);
+.cabecalho{
+    background-color: #008000;
      color: white    ;
     display: flex;
     justify-content: space-around;
@@ -16,7 +16,28 @@ padding: 0;
    width: 25%;
 }
 
-.cabecalho-lista-item {
+.cabecalho-lista-item{
     display: inline-block;
     margin: 0 16px;
+}
+
+.escola-imagem {
+    width: 30%;
+}
+
+.escola{
+    background-image: linear-gradient(#008000,#26ff26);
+    color: #ffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.escola-div-conteudo{
+    width: 45%;
+}
+
+.escola-titulo{
+    padding: 20px 0;
 }
