--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ margin: 0;
 padding: 0;
 }
 
+body{
+    font-family: 'Poppins', sans-serif;
+}
+
 .cabecalho{
     background-color: #008000;
      color: white    ;
@@ -40,4 +44,16 @@ padding: 0;
 
 .escola-titulo{
     padding: 20px 0;
+}
+
+.estudante-imagem{
+    width: 100px;
+}
+
+.estudante-icone{
+    width: 30px;
+}
+
+.estudante-div{
+    text-align: center;
 }
